Fix but posts stucked multiple times

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -11,6 +11,12 @@ body {
 }
 
 /* post_form style */
+#posts-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .form-container {
   width: 90vw;
   height: 7%;
